fchore: copy and upload all contents of the project to personal git
