# swagger/swagger.yml
@@ -15,19 +15,19 @@ paths:
     get:
       tags:
       - games
-      description: get all objects
+      description: Get all games
       operationId: GamesController.GetAll
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.GameObject'
+            $ref: '#/definitions/mymongo.Game'
         "403":
           description: :gameId is empty
     post:
       tags:
       - games
-      description: create games
+      description: Create new game
       operationId: GamesController.Create
       parameters:
       - in: body
@@ -35,17 +35,17 @@ paths:
         description: The games content
         required: true
         schema:
-          $ref: '#/definitions/models.GameObject'
+          $ref: '#/definitions/mymongo.Game'
       responses:
-        "200":
-          description: '{string} models.GameObject.gameId'
-        "403":
-          description: body is empty
+        "201":
+          description: '{string} mymongo.Game.GameId'
+        "409":
+          description: game already exists
   /games/{gameId}:
     get:
       tags:
       - games
-      description: find games by gameId
+      description: Find games by gameId
       operationId: GamesController.Get
       parameters:
       - in: path
@@ -57,7 +57,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.GameObject'
+            $ref: '#/definitions/mymongo.Game'
         "403":
           description: :gameId is empty
         "404":
@@ -65,7 +65,7 @@ paths:
     put:
       tags:
       - games
-      description: update the games
+      description: Update game
       operationId: GamesController.Update
       parameters:
       - in: path
@@ -78,18 +78,20 @@ paths:
         description: The body
         required: true
         schema:
-          $ref: '#/definitions/models.GameObject'
+          $ref: '#/definitions/mymongo.Game'
       responses:
         "201":
           description: ""
           schema:
-            $ref: '#/definitions/models.GameObject'
+            $ref: '#/definitions/mymongo.Game'
         "403":
           description: :gameId is empty
+        "404":
+          description: ':mongo: no documents in result'
     delete:
       tags:
       - games
-      description: delete the games
+      description: Delete game
       operationId: GamesController.Delete
       parameters:
       - in: path
@@ -102,19 +104,6 @@ paths:
           description: '{string} delete success!'
         "403":
           description: gameId is empty
-  /test/hello:
-    get:
-      tags:
-      - test
-      description: Tests the API
-      operationId: TestController.TestEndpoint
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Test'
-        "403":
-          description: body is empty
   /user/:
     get:
       tags:
@@ -234,17 +223,6 @@ paths:
         "200":
           description: '{string} logout success'
 definitions:
-  models.GameObject:
-    title: GameObject
-    type: object
-    properties:
-      game_id:
-        type: string
-      game_name:
-        type: string
-      score:
-        type: integer
-        format: int64
   models.Profile:
     title: Profile
     type: object
@@ -258,12 +236,6 @@ definitions:
         type: string
       Gender:
         type: string
-  models.Test:
-    title: Test
-    type: object
-    properties:
-      resp:
-        type: string
   models.User:
     title: User
     type: object
@@ -276,6 +248,38 @@ definitions:
         $ref: '#/definitions/models.Profile'
       Username:
         type: string
+  mymongo.Game:
+    title: Game
+    type: object
+    properties:
+      created_on:
+        type: string
+        format: datetime
+      game_id:
+        type: string
+      genres:
+        type: array
+        items:
+          type: string
+      metadata:
+        $ref: '#/definitions/mymongo.MetaData'
+      release_date:
+        type: string
+        format: datetime
+      updated_on:
+        type: string
+        format: datetime
+  mymongo.MetaData:
+    title: MetaData
+    type: object
+    properties:
+      player_count:
+        type: integer
+        format: int64
+      server_status:
+        type: boolean
+      updated:
+        type: boolean
 tags:
 - name: games
   description: |
